[tool.poetry]
name = "musicR"
version = "0.1.0"
description = "A Python project for downloading YouTube playlists."
authors = ["yuzuponikemi"]

[tool.poetry.dependencies]
python = ">=3.8"
yt-dlp = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"